--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -43,7 +43,7 @@
                 </article>
 
                 <article class="About">
-                    <h2>About hej</h2>
+                    <h2>About</h2>
                     <p>text der fylderl lalalalahla</p>
                     <p>text der fylderl lalalalala</p>
                     <p>text der fylderl lalalalala</p>
