--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -10,6 +10,7 @@ ul.topnav {
     padding: 0;
     overflow: hidden;
     background-color: #888;
+    border-bottom: 2px solid #FFF;
 }
 
 ul.topnav li {
@@ -113,6 +114,10 @@ section article.Slider {
     height: 400px;
     background-color: #FFF;
     float:  left;
+    border: 2px solid #FFF;
+    -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
 }
 section article.About h2{
     text-align: center;
@@ -123,6 +128,10 @@ section article.About {
     width: 350px;
     height: 400px;
     float:  right;
+    border: 2px solid #FFF;
+    -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
 }
 section article.About .profilePic{
     bottom: 0;
@@ -136,6 +145,7 @@ footer {
     width: 100%;
     bottom: 0;
     position: absolute;
+    border-top: 2px solid #FFF;
 }
 
 footer article {
