--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -1,6 +1,13 @@
 ﻿body {
     margin: 0;
-    padding 0;
+    padding: 0;
+    background: radial-gradient(#999, #555, #333);
+}
+
+header{
+    width:100%;
+    height: 120px;
+    background-color:White;
 }
 
 /* top nav start */
@@ -10,7 +17,10 @@ ul.topnav {
     padding: 0;
     overflow: hidden;
     background-color: #888;
-    border-bottom: 2px solid #FFF;
+    /*border-bottom: 2px solid #FFF;*/
+    -webkit-box-shadow: 0px 2px 5px 0px red;
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
 }
 
 ul.topnav li {
@@ -46,25 +56,25 @@ ul.topnav li.right,
 }
 
 /* Slash separator start*/
-ul.topnav li::before {
+/*ul.topnav li::before {
+    content: '\00BB';
+    position: relative;
     color: #fff;
-    content: "/";
-    font-size: 2em;
 }
 
-ul.topnav li:last-child:after {
+ul.topnav li:last-child:before {
     content: none;
 }
 
 ul.topnav li a {
-    display: inline-block;
-}
+    /*display: inline-block;*/
+}*/
 /* Slash separator end*/
 /* top nav right end */
 
 /* Dropdown nav start */
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #111;
+    background-color: #555;
 }
 
 .dropdown-content {
@@ -74,6 +84,7 @@ li a:hover, .dropdown:hover .dropbtn {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+
 }
 
 .dropdown:hover .dropdown-content {
@@ -88,7 +99,6 @@ li a:hover, .dropdown:hover .dropbtn {
     height: 700px;
     width: 100%;
     margin: auto;
-    background: radial-gradient(#999, #555, #333);
     /*background-color: #666;*/
 }
 
@@ -115,9 +125,9 @@ section article.Slider {
     background-color: #FFF;
     float:  left;
     border: 2px solid #FFF;
-    -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
 }
 section article.About h2{
     text-align: center;
@@ -129,9 +139,9 @@ section article.About {
     height: 400px;
     float:  right;
     border: 2px solid #FFF;
-    -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
 }
 section article.About .profilePic{
     bottom: 0;
@@ -144,8 +154,7 @@ footer {
     background-color: #333;
     width: 100%;
     bottom: 0;
-    position: absolute;
-    border-top: 2px solid #FFF;
+    border-top: 1px solid #FFF;
 }
 
 footer article {
