--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -21,11 +21,10 @@
                 <li class="right"><a href="#about">About</a></li>
                 <li class="right"><a href="#news">News</a></li>
                 <li class="dropdown right">
-                    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+                    <a href="Tegninger.aspx" class="dropbtn">Tegninger</a>
                     <div class="dropdown-content">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
+                        <a href="Tegninger.aspx">Tegninger</a>
+                        <a href="#">Priser</a>
                     </div>
                 </li>
                 <li class="right"><a class="active" href="#home">Home</a></li>
