--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -20,17 +20,17 @@
         </header>
         <nav>
             <ul class="topnav">
-                <li class="right"><a href="#contact">Contact</a></li>
-                <li class="right"><a href="#about">About</a></li>
-                <li class="right"><a href="#news">News</a></li>
-                <li class="dropdown right">
+                <li id="Current5" class="right"><a href="#contact">Contact</a></li>
+                <li id="CurrentKontakt" class="right"><a href="#about">About</a></li>
+                <li id="CurrentBilled" class="right"><a href="#news">News</a></li>
+                <li id="CurrentTegn" class="dropdown right">
                     <a href="Tegninger.aspx" class="dropbtn">Tegninger</a>
                     <div class="dropdown-content">
                         <a href="Tegninger.aspx">Tegninger</a>
                         <a href="#">Priser</a>
                     </div>
                 </li>
-                <li class="right"><a class="active" href="#home">Home</a></li>
+                <li id="CurrentHome" class="right"><a href="Default.aspx">Home</a></li>
             </ul>
         </nav>
 
