--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     background: radial-gradient(#999, #555, #333);
+    /*background-color: red;*/
 }
 
 header{
-    width:100%;
-    height: 120px;
+    width: 100%;
+    height: 100%;
     background-color:White;
 }
 
@@ -124,32 +125,65 @@ section article.FrontText p {
     /*background-color:red;*/
     margin:auto;
     width:600px;
-    
-    
 }
 section article.About h2{
     text-align: center;
 }
+section article.About p{
+    font-size: 14px;
+    padding: 0 20px 0 20px;
+}
 section article.About {
-    margin: 30px 100px 0 0;
+    margin: 30px 0 0 100px;
     background-color: #FFF;
     width: 350px;
     height: 400px;
-    float:  right;
+    float:  left;
     border: 2px solid #FFF;
+    position: relative;
+    z-index:1;
     -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
 }
-section article.About .profilePic{
+
+@media screen and (max-width: 1100px){
+    section article.About{
+        margin: 30px 0 0 50px;
+    }
+}
+@media screen and (max-width: 1040px) {
+    section article.About {
+        margin: 30px 0 0 25px;
+    }
+}
+@media screen and (max-width: 1010px) {
+    section article.About {
+        margin: 30px 0 0 10px;
+    }
+}
+@media screen and (max-width: 990px) {
+    section article.About {
+        margin: 30px 0 30px 0;
+        clear:left;
+    }
+}
+
+.profilePic {
+    z-index: -2;
+    padding-left:20px;
+    right: 0;
     bottom: 0;
-    float:  right;
+    position: absolute;
+    /*opacity: 0.8;*/
+    /*margin-top: 12spx;
+    float:right;*/
+    /*clear:both;*/
 }
 /* Content End */
-
 /* Footer Start */
 footer {
-    clear:both;
+    clear: both;
     background-color: #333;
     width: 100%;
     bottom: 0;
