--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -97,7 +97,7 @@ li a:hover, .dropdown:hover .dropbtn {
 
 /* Content Start */
 #wrapper {
-    height: 700px;
+    height: 100%;
     width: 100%;
     margin: auto;
     /*background-color: #666;*/
@@ -187,6 +187,7 @@ footer {
     background-color: #333;
     width: 100%;
     bottom: 0;
+    position:fixed;
     border-top: 1px solid #FFF;
 }
 
