--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -201,6 +201,7 @@ h2 {
     font-family: Segoe UI Black;
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 p {
     font-family: Segoe UI Black;
@@ -292,6 +293,7 @@ div.container {
     height: 600px;
     float:left;
 }
+
 #ProduktCenter {
     width: 1800px;
     margin: 50px auto;
