--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -107,7 +107,7 @@ section {
     width:  1200px;
     margin: auto;
     /*float: left;*/
-    height: 100%;
+    height: 588px;
     /*background-color: #879;*/
     padding: 0 20px 0 20px;
     /*margin: 0 0 0 20px;*/
@@ -187,7 +187,7 @@ footer {
     background-color: #333;
     width: 100%;
     bottom: 0;
-    /*position:fixed;*/
+    /*position:absolute;*/
     border-top: 1px solid #FFF;
 }
 
@@ -244,7 +244,7 @@ div.container {
 }
 #Produktalign {
     width: 1260px;
-    margin: 50px auto;
+    margin: 50px auto 0 auto;
 }
 #GruppeMenu {
     width: 200px;
