--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -21,9 +21,8 @@
         </header>
         <nav>
             <ul class="topnav">
-                <li id="Current5" class="right"><a href="#contact">Contact</a></li>
-                <li id="CurrentKontakt" class="right"><a href="#about">About</a></li>
-                <li id="CurrentBilled" class="right"><a href="#news">News</a></li>
+                <li id="Current5" class="right"><a href="#Kontakt">Kontakt</a></li>
+                <li id="CurrentBilled" class="right"><a href="#Billeder">Billeder</a></li>
                 <li id="CurrentTegn" class="dropdown right">
                     <a href="Tegninger.aspx" class="dropbtn">Tegninger</a>
                     <div class="dropdown-content">
@@ -31,7 +30,7 @@
                         <a href="#">Priser</a>
                     </div>
                 </li>
-                <li id="CurrentHome" class="right"><a href="Default.aspx">Home</a></li>
+                <li id="CurrentHome" class="right"><a href="Default.aspx">Hjem</a></li>
             </ul>
         </nav>
 
