--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -229,7 +229,7 @@ a {
     float: left;
 }
 .LogoutButton{
-    margin:15px 0 0 20%;
+    margin:5px 20px 0 14%;
 }
 .floatRight{
     float:right;
