--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -176,7 +176,7 @@ section article.About {
     right: 0;
     bottom: 0;
     position: absolute;
-    /*opacity: 0.8;*/
+    /*opacity: 0.8;f*/
     /*margin-top: 12spx;
     float:right;*/
     /*clear:both;*/
