--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -1,8 +1,9 @@
 ﻿body {
     margin: 0;
     padding: 0;
+    min-height: 100%;
     background: radial-gradient(#999, #555, #333);
-    position:relative;
+    position: relative;
     /*background-color: red;*/
 }
 
@@ -191,8 +192,6 @@ footer {
     background-color: #333;
     width: 100%;
     bottom: 0;
-    right:0;
-    left:0;
     position:absolute;
     border-top: 1px solid #FFF;
 }
