lavet kunderank bygendt tegninger reaperter view

--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -22,6 +22,7 @@
         <nav>
             <ul class="topnav">
                 <li id="CurrentKont" class="right"><a href="Kontakt.aspx">Kontakt</a></li>
+                <li id="CurrentRank" class="right"><a href="KundeRank.aspx">Rank Liste</a></li>
                 <li id="CurrentBilled" class="right"><a href="Billeder.aspx">Billeder</a></li>
                 <li id="CurrentTegn" class="dropdown right">
                     <a href="Tegninger.aspx" class="dropbtn">Tegninger</a>
