--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -194,7 +194,7 @@ footer {
     bottom: 0;
     position:fixed;
     border-top: 1px solid #FFF;
-    display:block;
+    display:none;
 }
 
 footer article {
