--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -276,11 +276,12 @@ div.container {
 #Produktalign {
     width: 1260px;
     margin: 50px auto 0 auto;
+    float:left;
 }
 
 #GruppeMenu {
     width: 200px;
-    margin: 0 0 0 60px;
+    margin: 50px 0 0 60px;
     float: left;
 }
 
@@ -354,11 +355,11 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: white;
+    /*color: white;*/
     padding: 12px 20px;
     border: none;
-    border-radius: 4px;
+    /*border-radius: 4px;*/
     cursor: pointer;
 }
 
@@ -401,4 +402,16 @@ input[type=submit] {
 }
 .Ranker {
 
+}
+.DetajleGrid{
+    width:1000px;
+    margin:auto;
+    text-align:center;
+}
+.DetajleGridButtons{
+    width:250px;
+    background-color:none;
+}
+#PrisTableRow th {
+    border: 1px solid black;
 }
