--- a/Moccie/Style/Admin.css
+++ b/Moccie/Style/Admin.css
@@ -1,14 +1,1 @@
-﻿.DetajleGrid {
-    width: 1000px;
-    margin: auto;
-    text-align: center;
-}
-
-.DetajleGridButtons {
-    width: 250px;
-    background-color: none;
-}
-
-#PrisTableRow th {
-    border: 1px solid black;
-}
+﻿
