--- a/Moccie/Style/Produkter.css
+++ b/Moccie/Style/Produkter.css
@@ -88,3 +88,18 @@ div.container {
     float: left;
     position: relative;
 }
+
+.DetajleGrid {
+    width: 1000px;
+    margin: auto;
+    text-align: center;
+}
+
+.DetajleGridButtons {
+    width: 250px;
+    background-color: none;
+}
+
+#PrisTableRow th {
+    border: 1px solid black;
+}
