--- a/Moccie/Style/Produkter.css
+++ b/Moccie/Style/Produkter.css
@@ -38,18 +38,18 @@ div.container {
     float: left;
 }
 
-#GruppeMenu a {
-    background-color: #eee;
-    color: black;
-    display: block;
-    padding: 12px;
-    text-decoration: none;
-    text-align: center;
-}
+    #GruppeMenu a {
+        background-color: #eee;
+        color: black;
+        display: block;
+        padding: 12px;
+        text-decoration: none;
+        text-align: center;
+    }
 
-#GruppeMenu a:hover {
-    background-color: #ccc;
-}
+        #GruppeMenu a:hover {
+            background-color: #ccc;
+        }
 
 #ProduktCenterImage {
     width: 900px;
@@ -63,18 +63,18 @@ div.container {
     float: left;
 }
 
-#ProduktMenu a {
-    background-color: #eee;
-    color: black;
-    display: block;
-    padding: 12px;
-    text-decoration: none;
-    text-align: center;
-}
+    #ProduktMenu a {
+        background-color: #eee;
+        color: black;
+        display: block;
+        padding: 12px;
+        text-decoration: none;
+        text-align: center;
+    }
 
-#ProduktMenu a:hover {
-    background-color: #ccc;
-}
+        #ProduktMenu a:hover {
+            background-color: #ccc;
+        }
 
 #ProduktCenter {
     width: 1800px;
@@ -89,19 +89,70 @@ div.container {
     position: relative;
 }
 
-.DetajleGrid {
+/*.DetajleGrid {
     width: 1000px;
     margin: auto;
     text-align: center;
-    background-color:white;
+    background-color: white;
 }
-
+*/
 .DetajleGridButtons {
-    width: 250px;
+    margin:0;
+    padding:0;
+    width: 300px;
     background-color: none;
 }
 
-#PrisTableRow th {
-    /*border: 1px solid black;*/
-
+table.blueTable {
+    background-color: #E8E8E8;
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
 }
+
+    table.blueTable td, table.blueTable th {
+        border: 0px solid #AAAAAA;
+        padding: 10px 10px;
+    }
+
+    table.blueTable tbody td {
+        font-size: 17px;
+        font-weight: bold;
+    }
+
+    table.blueTable td:nth-child(even) {
+        background: #C1C1C1;
+    }
+
+    table.blueTable thead {
+        background: #585858;
+        background: -moz-linear-gradient(top, #828282 0%, #686868 66%, #585858 100%);
+        background: -webkit-linear-gradient(top, #828282 0%, #686868 66%, #585858 100%);
+        background: linear-gradient(to bottom, #828282 0%, #686868 66%, #585858 100%);
+    }
+
+        table.blueTable thead th {
+            font-size: 18px;
+            font-weight: bold;
+            color: #FFFFFF;
+            text-align: center;
+            border-left: 0px solid #D0E4F5;
+        }
+
+            table.blueTable thead th:first-child {
+                border-left: none;
+            }
+
+    table.blueTable tfoot {
+        font-size: 23px;
+        font-weight: bold;
+        background: #C1C1C1;
+        background: -moz-linear-gradient(top, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
+        background: -webkit-linear-gradient(top, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
+        background: linear-gradient(to bottom, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
+        border-top: 2px solid #444444;
+    }
+
+        table.blueTable tfoot td {
+            font-size: 23px;
+        }
