--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -155,4 +155,16 @@ footer {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    width: 500px;
+    float: right;
+    margin-right:50px;
+}
+#TekstForm {
+    width: 500px;
+    float: left;
+    margin-left: 50px;
+    text-align:center;
+}
+#TekstForm, h2 {
+ 
 }
