--- a/Moccie/Style/Admin.css
+++ b/Moccie/Style/Admin.css
@@ -1,1 +1,26 @@
-﻿
+﻿h2 {
+    font-family: Segoe UI Black;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+p {
+    font-family: Segoe UI Black;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    font-family: Segoe UI Black;
+}
+.AdminSection {
+    padding:50px 0 0 0;
+}
+.AdminArticle {
+    margin:auto;
+
+    width:700px;
+    align-content:center;
+
+}
