--- a/Moccie/Style/Admin.css
+++ b/Moccie/Style/Admin.css
@@ -24,3 +24,11 @@ a {
     align-content:center;
 
 }
+.Overskrift {
+}
+.Infomation {
+    padding:20px 0 0 0;
+}
+.Footer {
+    padding: 20px 0 0 0;
+}
