--- a/Moccie/Style/repeatable.css
+++ b/Moccie/Style/repeatable.css
@@ -69,3 +69,10 @@ input[type=submit]:hover {
 .tekstsize {
     font-size: 20px;
 }
+.ErrorBox{
+    margin:75px auto;
+    clear:both;
+    padding:20px;
+    width:400px;
+    height:100%;
+}
