--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -141,10 +141,6 @@ section article.FrontText p {
 /* Content End */
 
 /* Footer Start */
-.footerfix {
-    /*height:587px;*/
-}
-
 footer {
     clear: both;
     background-color: #333;
@@ -176,6 +172,6 @@ footer {
     margin-left: 50px;
     text-align:center;
 }
-#TekstForm, h2 {
+/*#TekstForm, h2 {
  
-}
+}*/
