--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿html,body {
     margin: 0;
     padding: 0;
     min-height: 100%;
@@ -97,13 +97,13 @@ li a:hover, .dropdown:hover .dropbtn {
 /* top nav end */
 
 /* Content Start */
-#wrapper{
-    width:100%;
-    margin:auto;
+#wrapper {
+    width: 100%;
+    margin: auto;
 }
 @media screen and (max-height: 1080px) {
     #wrapper {
-        height: 659px;
+        /*height: 659px;*/
         /*background-color: #666;*/
     }
 }
@@ -145,16 +145,22 @@ footer {
     clear: both;
     background-color: #333;
     width: 100%;
+    border-top: 1px solid #FFF;
     bottom: 0;
     position: relative;
-    border-top: 1px solid #FFF;
-    margin-top:50px;
+    margin-top: 50px;
     /*display: none;*/
 }
 
     footer article {
         text-align: center;
         height: 70px;
+    }
+
+    .footerClear{
+        clear:both;
+        width:100%;
+        height:5px;
     }
 /* Footer End */
 
