--- a/Moccie/Style/jquery.bxslider.css
+++ b/Moccie/Style/jquery.bxslider.css
@@ -10,7 +10,7 @@
     width: 600px;
     height: 400px;
     position: relative;
-    margin: 30px 0 60px 0;
+    margin: 30px 0 17.8% 0;
     padding: 0;
     /**zoom: 1;*/
     -ms-touch-action: pan-y;
