--- a/Moccie/Style/Admin.css
+++ b/Moccie/Style/Admin.css
@@ -35,8 +35,16 @@ a {
 
 
 
+.tegnogbilled {
+    margin:auto;
+    padding: 50px 0 0 0;
+    width:800px;
+    height:100%;
+   
 
+}
 .accordion {
+    text-align:center;
     background-color: #eee;
     color: #444;
     cursor: pointer;
@@ -54,8 +62,8 @@ a {
     }
 
 .panel {
-    padding: 0 18px;
+    padding: 10px 18px;
     display: none;
-    background-color: white;
+    background-color: darkgrey;
     overflow: hidden;
 }
