--- a/Moccie/Style/repeatable.css
+++ b/Moccie/Style/repeatable.css
@@ -57,6 +57,15 @@ input[type=submit]:hover {
 .floatLeft {
     float: left;
 }
+.clearBoth{
+    clear:both;
+}
+.Top10{
+    margin-top:10px;
+}
+.Top25{
+    margin-top:25px;
+}
 
 .TekstCenter {
     text-align: center;
