--- a/Moccie/Style/Ranklist.css
+++ b/Moccie/Style/Ranklist.css
@@ -32,6 +32,16 @@
     border-radius: 20px 20px 0 0;
     height: 50px;
 }
+.Rankerbox {
+    text-align:center;
+}
+.Ranker {
+    font-size: 25px;
+    font-weight: bold;
+   
+    width: 600px;
+    margin: auto;
+    padding:0 0 0 150px;
+}
 
-/*.Ranker {
-}*/
+
