--- a/Moccie/Style/repeatable.css
+++ b/Moccie/Style/repeatable.css
@@ -13,6 +13,8 @@ p {
 
 a {
     font-family: Segoe UI Black;
+    text-decoration:none;
+    color:#000;
 }
 
 input[type=text], select, textarea {
@@ -84,4 +86,7 @@ input[type=submit]:hover {
     padding:20px;
     width:400px;
     height:100%;
+}
+.width100{
+    width:100%;
 }
