--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -23,20 +23,23 @@
 <body>
     <form id="form1" runat="server">
         <header>
-            <img src="Pictures/banner.png" width="100%" />
+            <a href="Default.aspx"><img src="Pictures/banner.png" width="100%" /></a>
         </header>
         <nav>
             <ul class="topnav">
                 <li id="CurrentKont" class="right"><a href="Kontakt.aspx">Kontakt</a></li>
-                <li id="CurrentRank" class="right"><a href="KundeRank.aspx">Rank Liste</a></li>
+                <%--<li id="CurrentRank" class="right"><a href="KundeRank.aspx">Rank Liste</a></li>--%>
                 <li id="CurrentBilled" class="right"><a href="Billeder.aspx">Billeder</a></li>
-                <li id="CurrentTegn" class="dropdown right">
+                <li id="CurrentTegn" class="right"><a href="Tegninger.aspx">Tegninger</a></li>
+
+                <%--<li id="CurrentTegn" class="dropdown right">
                     <a href="Tegninger.aspx" class="dropbtn">Tegninger</a>
                     <div class="dropdown-content">
                         <a href="Tegninger.aspx">Tegninger</a>
                         <a href="Priser.aspx">Priser</a>
                     </div>
-                </li>
+                </li>--%>
+
                 <li id="CurrentHome" class="right"><a href="Default.aspx">Hjem</a></li>
             </ul>
         </nav>
@@ -46,7 +49,7 @@
             </asp:ContentPlaceHolder>
         </div>
 
-        <footer>
+       <footer>
             <article>
                 <asp:Repeater ID="RepeaterFooter" runat="server" DataSourceID="SqlDataSourceFooter">
                     <ItemTemplate>
