--- a/Moccie/Style/Slider.css
+++ b/Moccie/Style/Slider.css
@@ -15,6 +15,12 @@ img {
     vertical-align: middle;
 }
 
+.slider_box{
+    width:600px;
+    height:400px;
+    float:left;
+}
+
 /* Slideshow container */
 .slideshow-container {
     /*max-width: 600px;*/
