--- a/Moccie/Style/Produkter.css
+++ b/Moccie/Style/Produkter.css
@@ -8,17 +8,18 @@
 }
 
 #ProduktGruppe {
-    width: 960px;
+    width: 52%;
     margin: 50px auto;
 }
 
 #Grupper {
     margin: 0 20px 0 0;
+    
     width: 300px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
-    float: left;
+    
 }
 
 div.container {
@@ -27,7 +28,7 @@ div.container {
 }
 
 #Produktalign {
-    width: 1260px;
+    width: 71.6%;
     margin: 50px auto 0 auto;
     float: left;
 }
