--- a/Moccie/Style/repeatable.css
+++ b/Moccie/Style/repeatable.css
@@ -6,7 +6,7 @@
 }
 
 p {
-    font-family: Segoe UI Black;
+    font-family: Segoe UI;
     padding: 0;
     margin: 0;
 }
@@ -89,4 +89,14 @@ input[type=submit]:hover {
 }
 .width100{
     width:100%;
+}
+
+.textbox {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
 }
