--- a/Moccie/Style/Produkter.css
+++ b/Moccie/Style/Produkter.css
@@ -70,10 +70,14 @@ div.container {
     /*margin: 50px auto;*/
     float: left;
 }
+#produktImage {
+    /*width:850px;*/
+    width:94.5%;
+}
 
 #ProduktMenu {
     width: 200px;
-    margin: 0 190px 0 10px;
+    margin: 0 190px 0 60px;
     float: left;
 }
 
@@ -90,83 +94,90 @@ div.container {
             background-color: #ccc;
         }
 
-#ProduktCenter {
-    width: 1800px;
-    margin: 50px auto;
-}
+    #ProduktCenter {
+        /*width: 1800px;*/
+        width: 100%;
+        margin: 50px auto;
+    }
 
-#ContentInfo {
-    background-color: white;
-    width: 500px;
-    height: 600px;
-    float: left;
-    position: relative;
-}
+    #ContentInfo {
+        background-color: white;
+        width: 400px;
+        /*width:22.25%;*/
+        height: 100%;
+        padding: 0 0 80px 0;
+        float: left;
+        position: relative;
+    }
 
-/*.DetajleGrid {
+        #ContentInfo p {
+            padding: 0 10px 0 10px;
+        }
+
+    /*.DetajleGrid {
     width: 1000px;
     margin: auto;
     text-align: center;
     background-color: white;
 }
 */
-.DetajleGridButtons {
-    margin:0;
-    padding:0;
-    width: 300px;
-    background-color: none;
-}
-
-table.blueTable {
-    background-color: #E8E8E8;
-    width: 100%;
-    text-align: center;
-    border-collapse: collapse;
-}
-
-    table.blueTable td, table.blueTable th {
-        border: 0px solid #AAAAAA;
-        padding: 10px 10px;
+    .DetajleGridButtons {
+        margin: 0;
+        padding: 0;
+        width: 300px;
+        background-color: none;
     }
 
-    table.blueTable tbody td {
-        font-size: 17px;
-        font-weight: bold;
+    table.blueTable {
+        background-color: #E8E8E8;
+        width: 100%;
+        text-align: center;
+        border-collapse: collapse;
     }
 
-    table.blueTable td:nth-child(even) {
-        background: #C1C1C1;
-    }
-
-    table.blueTable thead {
-        background: #585858;
-        background: -moz-linear-gradient(top, #828282 0%, #686868 66%, #585858 100%);
-        background: -webkit-linear-gradient(top, #828282 0%, #686868 66%, #585858 100%);
-        background: linear-gradient(to bottom, #828282 0%, #686868 66%, #585858 100%);
-    }
-
-        table.blueTable thead th {
-            font-size: 18px;
-            font-weight: bold;
-            color: #FFFFFF;
-            text-align: center;
-            border-left: 0px solid #D0E4F5;
+        table.blueTable td, table.blueTable th {
+            border: 0px solid #AAAAAA;
+            padding: 10px 10px;
         }
 
-            table.blueTable thead th:first-child {
-                border-left: none;
+        table.blueTable tbody td {
+            font-size: 17px;
+            font-weight: bold;
+        }
+
+        table.blueTable td:nth-child(even) {
+            background: #C1C1C1;
+        }
+
+        table.blueTable thead {
+            background: #585858;
+            background: -moz-linear-gradient(top, #828282 0%, #686868 66%, #585858 100%);
+            background: -webkit-linear-gradient(top, #828282 0%, #686868 66%, #585858 100%);
+            background: linear-gradient(to bottom, #828282 0%, #686868 66%, #585858 100%);
+        }
+
+            table.blueTable thead th {
+                font-size: 18px;
+                font-weight: bold;
+                color: #FFFFFF;
+                text-align: center;
+                border-left: 0px solid #D0E4F5;
             }
 
-    table.blueTable tfoot {
-        font-size: 23px;
-        font-weight: bold;
-        background: #C1C1C1;
-        background: -moz-linear-gradient(top, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
-        background: -webkit-linear-gradient(top, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
-        background: linear-gradient(to bottom, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
-        border-top: 2px solid #444444;
-    }
+                table.blueTable thead th:first-child {
+                    border-left: none;
+                }
 
-        table.blueTable tfoot td {
+        table.blueTable tfoot {
             font-size: 23px;
+            font-weight: bold;
+            background: #C1C1C1;
+            background: -moz-linear-gradient(top, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
+            background: -webkit-linear-gradient(top, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
+            background: linear-gradient(to bottom, #d0d0d0 0%, #c7c7c7 66%, #C1C1C1 100%);
+            border-top: 2px solid #444444;
         }
+
+            table.blueTable tfoot td {
+                font-size: 23px;
+            }
