--- a/Moccie/Admin/MasterPageAdmin.master
+++ b/Moccie/Admin/MasterPageAdmin.master
@@ -35,21 +35,21 @@
             </asp:ContentPlaceHolder>
         </div>
 
-        <footer>
+        <%--<footer>
             <article>
                 <asp:Repeater ID="RepeaterFooter" runat="server" DataSourceID="SqlDataSourceFooter">
                     <ItemTemplate>
                         <h2><%#Eval("Text") %></h2>
                     </ItemTemplate>
                 </asp:Repeater>
-                <%--<h2>Footer content here</h2>--%>
+                <%--<h2>Footer content here</h2>--%
                 <asp:SqlDataSource runat="server" ID="SqlDataSourceFooter" ConnectionString='<%$ ConnectionStrings:MoccieDBConnectionString %>' SelectCommand="SELECT * FROM [InfoText] WHERE ([Lokation] = @Lokation)">
                     <SelectParameters>
                         <asp:Parameter DefaultValue="Footer" Name="Lokation" Type="String"></asp:Parameter>
                     </SelectParameters>
                 </asp:SqlDataSource>
             </article>
-        </footer>
+        </footer>--%>
     </form>
 </body>
 </html>
