--- a/Moccie/Style/responsive.css
+++ b/Moccie/Style/responsive.css
@@ -24,6 +24,8 @@
     padding: 0 20px;
     overflow: hidden;
 }
+.headrep3 {
+}
 
 .mainrep {
     float: left;
@@ -79,8 +81,34 @@
     }
 }
 
+/* Default.aspx */
+@media screen and (max-width: 1100px) {
+    section article.About {
+        margin: 30px 0 0 50px;
+    }
+}
+
+@media screen and (max-width: 1040px) {
+    section article.About {
+        margin: 30px 0 0 25px;
+    }
+}
+
+@media screen and (max-width: 1010px) {
+    section article.About {
+        margin: 30px 0 0 10px;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    section article.About {
+        margin: 80px 0 30px 0;
+        clear: left;
+    }
+}
 
 
+/* tegninger.aspx */
 @media only screen and (max-width:1780px) {
     #ProduktMenu {
         margin: 0 140px 0 60px;
@@ -127,5 +155,18 @@
 @media only screen and (max-width:1226px) {
     #ContentInfo {
         margin: 0 0 50px 50px;
+    }
+}
+
+/* Kontakt.aspx */
+@media only screen and (max-width:1150px) {
+    #KontaktForm {
+        clear:both;
+        float:left;
+        margin-top:50px;
+    }
+
+    section article.FrontText {
+        width:55%;
     }
 }
