--- a/Moccie/Style/Admin.css
+++ b/Moccie/Style/Admin.css
@@ -71,3 +71,15 @@ a {
 .panel p {
     padding:0 0 0 10px;
 }
+
+.panel2 {
+    padding: 10px 18px;
+    display: none;
+    background-color: darkgrey;
+    overflow: hidden;
+    width: 100%
+}
+
+    .panel2 p {
+        padding: 0 0 0 10px;
+    }
