--- a/Moccie/Style/SliderCss.css
+++ b/Moccie/Style/SliderCss.css
@@ -19,6 +19,7 @@
         top: 0;
         left: 0;
         position: absolute;
+        margin:auto;
         font-size: 12px; 
         list-style: none;
         margin: 0;
@@ -31,14 +32,14 @@
         background-color: rgba(0,0,0,0.3);
         background-size: contain;
         box-shadow: inset 0 0 2px rgba(255,255,255,.3);
-    
         cursor: default;
         display: block;
         position: absolute;
-        width: 100%;
+        /*width: 100%;*/
         height: 100%;
         background-repeat: no-repeat;
         background-position: center center;
+
     }
 .ImageSlide {
     background-position: center center;
