slider lavet og andet

--- a/Moccie/Style/Produkter.css
+++ b/Moccie/Style/Produkter.css
@@ -181,3 +181,6 @@ div.container {
             table.blueTable tfoot td {
                 font-size: 23px;
             }
+.produktpicTilføj{
+    max-height:170px;
+}
