--- a/Moccie/Admin/MasterPageAdmin.master
+++ b/Moccie/Admin/MasterPageAdmin.master
@@ -24,6 +24,7 @@
             <ul class="topnav">
                 <li class="right"><asp:Button ID="ButtonLogout" runat="server" Text="Log ud" CssClass="LogoutButton" OnClick="ButtonLogout_Click"/></li>
                 <li id="CurrentKont" class="right"><a href="KontaktAdmin.aspx">Kontakt</a></li>
+                <li id="CurrentBesk" class="right"><a href="BeskederAdmin.aspx">Beskeder</a></li>
                 <li id="CurrentBilled" class="right"><a href="BillederAdmin.aspx">Billeder</a></li>
                 <li id="CurrentTegn" class="right"><a href="TegningerAdmin.aspx">Tegninger</a></li>
                 <li id="CurrentHome" class="right"><a href="DefaultAdmin.aspx">Hjem</a></li>
