--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     min-height: 100%;
-    background: radial-gradient(#393939, #292929, #242424);
+    background: radial-gradient(#444444, #292929, #141414);
     position: relative;
     /*background-color: red;*/
 }
@@ -134,6 +134,7 @@ section article.FrontText {
     padding: 10px;
     text-align: center;
     width: 100%;
+    color:#e0e0e0;
 }
 
 section article.FrontText p {
@@ -147,7 +148,7 @@ section article.FrontText p {
 /* Footer Start */
 footer {
     clear: both;
-    background-color: #202020;
+    background-color: #101010;
     color:#999999;
     width: 100%;
     border-top: 1px solid #FFF;
