--- a/Moccie/Style/repeatable.css
+++ b/Moccie/Style/repeatable.css
@@ -38,7 +38,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: darkgrey;
 }
 
 .ALink {
