--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -35,10 +35,10 @@
         </header>
         <nav>
             <ul class="topnav">
-                <li id="CurrentKont" class="right"><a href="Kontakt.aspx">Kontakt</a></li>
+                <li id="CurrentKont" class="right"><a href="Kontakt.aspx">Contact</a></li>
                 <%--<li id="CurrentRank" class="right"><a href="KundeRank.aspx">Rank Liste</a></li>--%>
-                <li id="CurrentBilled" class="right"><a href="Billeder.aspx">Billeder</a></li>
-                <li id="CurrentTegn" class="right"><a href="Tegninger.aspx">Tegninger</a></li>
+                <li id="CurrentBilled" class="right"><a href="Billeder.aspx">Pictures</a></li>
+                <li id="CurrentTegn" class="right"><a href="Tegninger.aspx">Drawings</a></li>
 
                 <%--<li id="CurrentTegn" class="dropdown right">
                     <a href="Tegninger.aspx" class="dropbtn">Tegninger</a>
@@ -48,7 +48,7 @@
                     </div>
                 </li>--%>
 
-                <li id="CurrentHome" class="right"><a href="Default.aspx">Hjem</a></li>
+                <li id="CurrentHome" class="right"><a href="Default.aspx">Home</a></li>
             </ul>
         </nav>
 
