--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     min-height: 100%;
-    background: radial-gradient(#444444, #292929, #141414);
+    background: radial-gradient(#131313, #070707, BLACK);
     position: relative;
     /*background-color: red;*/
 }
@@ -20,7 +20,7 @@ ul.topnav {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #888;
+    background-color: #101010;
     /*border-bottom: 2px solid #FFF;*/
     -webkit-box-shadow: 0px 2px 5px 0px red;
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
@@ -149,7 +149,7 @@ section article.FrontText p {
 footer {
     clear: both;
     background-color: #101010;
-    color:#999999;
+    color: #4999aa;
     width: 100%;
     border-top: 1px solid #FFF;
     bottom: 0;
