Light box og billeder fixed til at fitte box

--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -12,6 +12,7 @@
     <link href="Style/Ranklist.css" rel="stylesheet" />
     <link href="Style/responsive.css" rel="stylesheet" />
     <link href="Style/SliderCss.css" rel="stylesheet" />
+    <link href="Style/LightBox.css" rel="stylesheet" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
