--- a/Moccie/Style/SliderCss.css
+++ b/Moccie/Style/SliderCss.css
@@ -36,15 +36,18 @@
         display: block;
         position: absolute;
         /*width: 100%;*/
-        height: 100%;
+        /*height: 100%;*/
+        max-width: 95%;
+        max-height: 100%;
         background-repeat: no-repeat;
         background-position: center center;
-
     }
 .ImageSlide {
     background-position: center center;
     right: 10px;
     left: 10px;
+    top: 10px;
+    bottom: 10px;
     margin: auto;
 }
 
